move footer images to assets dir

--- a/temp-footer.html
+++ b/temp-footer.html
@@ -1,56 +1,56 @@
 <table id="Table_01" width="1024" height="165" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="images/temp-footer_01.png" width="134" height="21" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_01.png" width="134" height="21" alt=""></td>
 		<td>
-			<img src="images/temp-footer_02.png" width="103" height="21" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_02.png" width="103" height="21" alt=""></td>
 		<td>
-			<img src="images/temp-footer_03.png" width="120" height="21" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_03.png" width="120" height="21" alt=""></td>
 		<td>
-			<img src="images/temp-footer_04.png" width="667" height="21" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_04.png" width="667" height="21" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="about.html">
-				<img src="images/temp-footer_05.png" width="134" height="24" border="0" alt=""></a></td>
+				<img src="assets/img/temp-footer/temp-footer_05.png" width="134" height="24" border="0" alt=""></a></td>
 		<td>
 			<a href="news.html">
-				<img src="images/temp-footer_06.png" width="103" height="24" border="0" alt=""></a></td>
+				<img src="assets/img/temp-footer/temp-footer_06.png" width="103" height="24" border="0" alt=""></a></td>
 		<td>
 			<a href="contact.html">
-				<img src="images/temp-footer_07.png" width="120" height="24" border="0" alt=""></a></td>
+				<img src="assets/img/temp-footer/temp-footer_07.png" width="120" height="24" border="0" alt=""></a></td>
 		<td>
-			<img src="images/temp-footer_08.png" width="667" height="24" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_08.png" width="667" height="24" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/temp-footer_09.png" width="134" height="35" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_09.png" width="134" height="35" alt=""></td>
 		<td>
-			<img src="images/temp-footer_10.png" width="103" height="35" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_10.png" width="103" height="35" alt=""></td>
 		<td>
-			<img src="images/temp-footer_11.png" width="120" height="35" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_11.png" width="120" height="35" alt=""></td>
 		<td>
-			<img src="images/temp-footer_12.png" width="667" height="35" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_12.png" width="667" height="35" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="index.html">
-				<img src="images/temp-footer_13.png" width="134" height="45" border="0" alt=""></a></td>
+				<img src="assets/img/temp-footer/temp-footer_13.png" width="134" height="45" border="0" alt=""></a></td>
 		<td>
-			<img src="images/temp-footer_14.png" width="103" height="45" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_14.png" width="103" height="45" alt=""></td>
 		<td>
-			<img src="images/temp-footer_15.png" width="120" height="45" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_15.png" width="120" height="45" alt=""></td>
 		<td>
-			<img src="images/temp-footer_16.png" width="667" height="45" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_16.png" width="667" height="45" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/temp-footer_17.png" width="134" height="40" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_17.png" width="134" height="40" alt=""></td>
 		<td>
-			<img src="images/temp-footer_18.png" width="103" height="40" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_18.png" width="103" height="40" alt=""></td>
 		<td>
-			<img src="images/temp-footer_19.png" width="120" height="40" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_19.png" width="120" height="40" alt=""></td>
 		<td>
-			<img src="images/temp-footer_20.png" width="667" height="40" alt=""></td>
+			<img src="assets/img/temp-footer/temp-footer_20.png" width="667" height="40" alt=""></td>
 	</tr>
 </table>
